2012-11-16 Sören Erdweg < erdweg -at- physik.rwth-aachen.de>
v97
===
   - update to CMSSW_5_3_6_patch1
   - update TreeContent.h
   - new Cocktail muon
   - tau vertex
   - changed b-tag
   - truth: decay of W', Z', H and Graviton is now stored

2012-10-31 Sebastian Thüer < thuer -at< physik.rwth-aachen.de>
v96
===
   - Fixed empty output when not using global skims
   - Updated SkimmingCuts to use the default Aachen clustername(has to be changed for users where the hypernews name differs from the aachen name)
   - Output is compatible with v95 output

2012-10-23 Martin Weber <weberm -at- physik.rwth-aachen.de>, Markus Radziej <radziej -at- physik.rwth-aachen.de>
	Added common skim
	Fixed CVS merge bug
        Fixed path problem in skim.sh
        Removed too verbose error reporting in large ECAL laser correction filter
	Fixed missing variable declaration

2012-09-14 Martin Weber <weberm -at- physik.rwth-aachen.de>
v92
===

* Bug fixes:
	In rare cases, when the pT of the triggerobject is zero, the code
	failed with a Fatal Root error. Now, the trigger objects are
	filled in that case with zeroes (pt=0, eta=0, phi=0).

	The version number has been fixed in SkimmingCuts.cfg

v91
===

	This version is about 40% faster and consumes about 1/3 disk space
	compared to the previous version.

* Bug fixes:
 - Memory leak fixed (in electron isolation)
 - wrong array bounds in tau genjet variables have been fixed, this resulted
   in memory corruption in few cases
 - fixed bug in how true pileup was filled. Added protection agains array
   bounds overflow
 - Wrong array bounds in some supercluster variables lead in rare cases to
   memory corruption.

* Updates
 - All variables concerning trigger matching have been removed, since this
   consumed a lot of disk space. Once has to do the trigger matching now
   offline. This results in less file size.
 - In order to save 40% of CPU time, trigger filters are now no longer associated