@@ -1,3 +1,8 @@
+2012-12-07 Tobias Pook < pook -at- physik.rwth-aachen.de>
+	-Added new variables: muo_DiMuonVertexValid,muo_DiMuonVertexNdf,muo_DiMuonVertexChi2,muo_DiMuonVertexMass to SusyACSkimAnalysis.cpp
+	-Metfilter updated with latest recommendations
+	-Metfilter definition moved from cmssw.py to seperate file ~/ACSusyAnalysis/python/METfilter_cff.py
+
 2012-11-16 Sören Erdweg < erdweg -at- physik.rwth-aachen.de>
 v97
 ===
